--- a/html/about.html
+++ b/html/about.html
@@ -30,5 +30,6 @@
     <footer>
         <p>&copy; 2024 Fashion Portfolio</p>
     </footer>
+    <script src="/js/buttonHandlers.js"></script>
 </body>
 </html>
