--- a/html/contact.html
+++ b/html/contact.html
@@ -38,5 +38,6 @@
     <footer>
         <p>&copy; 2024 Fashion Portfolio</p>
     </footer>
+    <script src="/js/buttonHandlers.js"></script>
 </body>
 </html>
