--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -34,5 +34,6 @@
     <footer>
         <p>&copy; 2024 Fashion Portfolio</p>
     </footer>
+    <script src="/js/buttonHandlers.js"></script>
 </body>
 </html>
