--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -23,7 +23,7 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <img src="assets/placeholder.jpg" alt="Project 1">
-                <p>Project 1 Description</p>
+                <p>Project  Description</p>
             </div>
             <div class="portfolio-item">
                 <img src="assets/placeholder.jpg" alt="Project 2">
