--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -32,7 +32,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Fashion Portfolio</p>
+        <p>&copy; 2024 Ekaterina Gurevich</p>
     </footer>
     <script src="/js/buttonHandlers.js"></script>
 </body>
