--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -37,3 +37,53 @@
     <script src="/js/buttonHandlers.js"></script>
 </body>
 </html>
+<!-- 
+FOR INDEX - landing page
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Ekaterina Gurevich</title>
+<link rel="stylesheet" href="https://use.typekit.net/gul1jti.css">
+<link href="port.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+<div class="bg">
+	<header>
+		<h1>Godot</h1>
+		<h3>A portfolio by Ekaterina Gurevich</h3>
+	</header>
+	<nav>
+	</nav>
+	<footer>
+		<h6> Ekaterina Gurevich 2025</h6>
+	</footer>
+	</div>
+</body>
+</html>
+
+FOR PORTFOLIO PIECE 1 - there will be 3 of them, styled all the same
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Portfolio</title>
+<link rel="stylesheet" href="https://use.typekit.net/gul1jti.css">
+<link href="port.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+	<div class="bg">
+		<header>
+		
+		</header>
+		
+		<footer>
+		<h6> Ekaterina Gurevich 2025</h6>
+		</footer>
+	</div>
+</body>
+</html>
+-->
